# Franka_VLA

./: .gitignore  LICENSE  README.md  realhand test.py
Franka Examples/: async_position_control.py  (+5 more)
Realhand_Gripper/: Realhand_Test1.py  pyproject.toml  realhand test.py  release_3.0.1.txt  requirements.txt
Realhand_Gripper/RealHand/config/: L10_positions.yaml  L21_positions.yaml  L25_positions.yaml  L6_positions.yaml  L7_positions.yaml  O6_positions.yaml
Realhand_Gripper/RealHand/core/can/: real_hand_l10_can.py  real_hand_l20_can.py  real_hand_l21_can.py  real_hand_l24_can.py  real_hand_l7_can.py
Realhand_Gripper/RealHand/core/canfd/: __init__.py  real_hand_l30_canfd.py
Realhand_Gripper/RealHand/core/rs485/: real_hand_l10_rs485.py  real_hand_l6_rs485.py  real_hand_o6_rs485.py
Realhand_Gripper/RealHand/utils/: init_real_hand.py  load_write_yaml.py  mapping.py  open_can.py
Realhand_Gripper/doc/: API-Reference.md
Realhand_Gripper/example/L10/gesture/: real_hand_fast.py  real_hand_finger_bend.py  real_hand_fist.py  real_hand_open_palm.py  real_hand_opposition.py  real_hand_sway.py
Realhand_Gripper/example/L10/get_status/: get_force.py  get_set_speed.py  get_set_state.py
Realhand_Gripper/example/L10/grab/: dynamic_grasping.py
Realhand_Gripper/example/L24/gesture/: real_hand_fast.py
Realhand_Gripper/example/L24/get_status/: get_speed.py  get_status.py
Realhand_Gripper/example/Real_hand_Sapien/: real_hand_sapien.py
Realhand_Gripper/example/gui_control/: gui_control.py
Realhand_Gripper/example/real_hand_mujoco/: MUJOCO_LOG.TXT  real_hand.py
(+57 files in other folders)
